--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "type": "module",
   "dependencies": {
+    "date-fns": "^3.3.1",
     "react-schedule-selector": "^3.0.2",
     "styled-components": "^6.1.8"
   }
